2009-02-20  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fix crash on documents with
	  only one line. Also fix scrollable width when the last line
	  is the longest line, e.g. when there is only one line.

2009-02-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/ITooltipProvider.cs: Tooltip proviters now
	  get informed about the modifier state.

2009-02-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/LinkEventArgs.cs:
	* Mono.TextEditor/TextViewMargin.cs: Link events are now
	  informed about the button and modifier state.

2009-02-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: fixed hruler width.

2009-02-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: removed debug message.

2009-02-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: fixed horizontal adjustment
	  behavior.

2009-02-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed a bug where clip
	  rectangles are not set on first draw (text may have been
	  drawn over the line number margin at first draw for
	  example).

2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: removed gtk keyboard snooper.

2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Used MergeUndoOperations for
	  drag&drop move operation.

	* Mono.TextEditor/Document.cs: Added MergeUndoOperations for
	  another way to merge undo operations.

2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Only handle the control keys
	  in the snooper func.

2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: fixed key snooper id.

2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs: fixed "Bug 445395 -
	  drag/drop text in editor".
