@@ -1,3 +1,10 @@
+2009-02-22  Mike Krüger  <mkrueger@novell.com>
+
+	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
+	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: fixed
+	  "Bug 478459 - Syntax highlighting broken with tripple-quote
+	  literal strings".
+
 2009-02-20  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Mono.TextEditor/TextEditor.cs: Fix crash on documents with
